Commit Map et bp_nounours

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,11 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Map/MapTest.MapTest
 GlobalDefaultServerGameMode=None
 GlobalDefaultGameMode=/Game/Blueprint/GM_Game.GM_Game_C
 GameInstanceClass=/Game/Blueprint/GI_Game.GI_Game_C
+EditorStartupMap=/Game/Map/MapTest.MapTest
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
